--- a/pom.xml
+++ b/pom.xml
@@ -71,12 +71,18 @@
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>adapter-common-lib</artifactId>
-            <version>0.0.7-SNAPSHOT</version>
+            <version>0.0.15</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>error-mapping-java</artifactId>
             <version>${error-mapping.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney.geck</groupId>
+            <artifactId>serializer</artifactId>
+            <version>0.6.7</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
