--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>adapter-bank-payout-spring-boot-starter</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>Adapter-bank-payout-spring-boot-starter</name>
@@ -40,14 +40,7 @@
 
     <properties>
         <damsel.version>1.563-d384c12</damsel.version>
-        <cds-proto.version>1.66-01353ce</cds-proto.version>
-        <spring-boot.version>2.6.7</spring-boot.version>
-        <woody.version>1.0.4</woody.version>
-        <geck.version>0.0.1</geck.version>
-        <lombok.version>1.18.24</lombok.version>
-        <slf4j-api.version>1.7.36</slf4j-api.version>
-        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-        <adapter-common-lib.version>1.1.1</adapter-common-lib.version>
+        <spring-boot.version>2.7.0</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -55,19 +48,25 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${javax.servlet-api.version}</version>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api.version}</version>
+            <version>1.7.36</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
             <scope>provided</scope>
         </dependency>
 
@@ -113,15 +112,20 @@
 
         <!--vality-->
         <dependency>
+            <groupId>dev.vality</groupId>
+            <artifactId>adapter-common-lib</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
             <groupId>dev.vality.woody</groupId>
             <artifactId>woody-thrift</artifactId>
-            <version>${woody.version}</version>
+            <version>1.0.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>dev.vality.geck</groupId>
             <artifactId>serializer</artifactId>
-            <version>${geck.version}</version>
+            <version>0.0.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -129,11 +133,6 @@
             <artifactId>damsel</artifactId>
             <version>${damsel.version}</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>dev.vality</groupId>
-            <artifactId>adapter-common-lib</artifactId>
-            <version>${adapter-common-lib.version}</version>
         </dependency>
 
         <!-- test -->
@@ -144,12 +143,15 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
+        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M6</version>
             </plugin>
         </plugins>
     </build>
