--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,5 @@ time.config:
   pollingDelay: 10
 ---
 error-mapping:
-  filePath: classpath:fixture/errors.json
-  pattern: "'%s' - '%s'" # 'code' - 'description'
+  file: classpath:fixture/errors.json
+  patternReason: "'%s' - '%s'" # 'code' - 'description'
